journald: use custom stream buffer limit

Fixes:

https://bugs.freedesktop.org/show_bug.cgi?id=86465